maybe figured out card alignment issue in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,12 @@ position: relative;
 
 /* Projects Section */
 #projects {
-  padding: 100px;
+  padding: 50px;
+}
+.project-column {
+/* padding: 1% 1%;  */
+/* not supposed to use padding, instead use margin ??? */
+/* margin: 1px; */
 }
 
 /* .text-truncate {
@@ -154,9 +159,16 @@ text-align: center;
 }
 
 .project-column {
-padding: 1% 1%;
+/* padding: 1% 1%;  */
+/* not supposed to use padding, instead use margin ??? */
+/* margin: 10px; */
+}
 }
 
+@media (min-width: 540px) {
+  .project-column {
+    /* margin: 10px; */
+  }
 }
 
 /* Footer Section */
